2006-12-14  Brian Bidulock  <bidulock@openss7.org>

	- debian script corrections from Michael Fig <fig@marketsystems.com>

	* debian/lis-devel.preinst.in: debian script corrections
	* debian/mscript_postinst.in: debian script corrections
	* debian/mscript_postrm.in: debian script corrections
	* debian/mscript_preinst.in: debian script corrections
	* debian/rules.in: debian script corrections
	
2006-11-26  Brian Bidulock  <bidulock@openss7.org>

	* include/sys/LiS/strlog.h: rationalize to Linux Fast-STREAMS

2006-10-31  Brian Bidulock  <bidulock@openss7.org>

	* include/sys/dki.h: do not define HZ for heavens sake

2006-10-30  Brian Bidulock  <bidulock@openss7.org>

	* acinclude.m4: add check for linux/compile.h
	* drivers/str/linux/ip_to_dlpi.c: include linux/utsrelease.h if available
	* head/linux-mdep.c: include linux/utsrelease.h if available

	* tests/local.at: added ability to sync between test cases
	* tests/testsuite-fifo.at: added ability to sync between test cases
	* tests/testsuite-pipe.at: added ability to sync between test cases
	* tests/testsuite-sad.at: added ability to sync between test cases
	* tests/testsuite-streams.at: added ability to sync between test cases
	* tests/testsuite-strtst.at: added ability to sync between test cases
	* tests/testsuite-test.at: added ability to sync between test cases
	* tests/testsuite-test2.at: added ability to sync between test cases
	* tests/testsuite-thrtst.at: added ability to sync between test cases
	* tests/testsuite-timetst.at: added ability to sync between test cases

2006-10-27  Brian Bidulock  <bidulock@openss7.org>

	* acinclude.m4:
	  - change linux/config.h to autoconf.h for 2.6.18
	  - added check for linux/devfs_fs_kernel.h that was deleted
	  - added check for linux/utsrelease.h that now includes UTS_RELEASE
	  - added check for simple_statfs that might be used later
	  - added checks from Linux Fast-STREAMS for simplicity
	  - added checks for i_private and i_blksize (inode diet)