@@ -1,6 +1,6 @@
 /*****************************************************************************
 
- @(#) $RCSfile: mux.c,v $ $Name:  $($Revision: 0.9.2.8 $) $Date: 2006/10/27 22:38:54 $
+ @(#) $RCSfile: mux.c,v $ $Name:  $($Revision: 0.9.2.9 $) $Date: 2006/12/18 09:05:17 $
 
  -----------------------------------------------------------------------------
 
@@ -46,14 +46,14 @@
 
  -----------------------------------------------------------------------------
 
- Last Modified $Date: 2006/10/27 22:38:54 $ by $Author: brian $
+ Last Modified $Date: 2006/12/18 09:05:17 $ by $Author: brian $
 
  *****************************************************************************/
 
-#ident "@(#) $RCSfile: mux.c,v $ $Name:  $($Revision: 0.9.2.8 $) $Date: 2006/10/27 22:38:54 $"
+#ident "@(#) $RCSfile: mux.c,v $ $Name:  $($Revision: 0.9.2.9 $) $Date: 2006/12/18 09:05:17 $"
 
 static char const ident[] =
-    "$RCSfile: mux.c,v $ $Name:  $($Revision: 0.9.2.8 $) $Date: 2006/10/27 22:38:54 $";
+    "$RCSfile: mux.c,v $ $Name:  $($Revision: 0.9.2.9 $) $Date: 2006/12/18 09:05:17 $";
 
 /*
  *  This driver provides a multiplexing driver as an example and a test program.
@@ -83,7 +83,7 @@ static char const ident[] =
 
 #define MUX_DESCRIP	"UNIX/SYSTEM V RELEASE 4.2 FAST STREAMS FOR LINUX"
 #define MUX_COPYRIGHT	"Copyright (c) 1997-2005 OpenSS7 Corporation.  All Rights Reserved."
-#define MUX_REVISION	"LfS $RCSfile: mux.c,v $ $Name:  $($Revision: 0.9.2.8 $) $Date: 2006/10/27 22:38:54 $"
+#define MUX_REVISION	"LfS $RCSfile: mux.c,v $ $Name:  $($Revision: 0.9.2.9 $) $Date: 2006/12/18 09:05:17 $"
 #define MUX_DEVICE	"SVR 4.2 STREAMS Multiplexing Driver (MUX)"
 #define MUX_CONTACT	"Brian Bidulock <bidulock@openss7.org>"
 #define MUX_LICENSE	"GPL"
@@ -164,6 +164,7 @@ MODULE_ALIAS("/dev/mux");
 MODULE_ALIAS("streams-major-" __stringify(CONFIG_STREAMS_MUX_MAJOR));
 MODULE_ALIAS("/dev/streams/mux");
 MODULE_ALIAS("/dev/streams/mux/*");
+MODULE_ALIAS("/dev/streams/clone/mux");
 #endif
 #endif
 
