@@ -1,3 +1,9 @@
+2006-12-18  Brian Bidulock  <bidulock@openss7.org>
+
+	* drivers/str/echo.c: rationalized to LFS
+	* drivers/str/mux.c: rationalized to LFS
+	* drivers/str/nuls.c: rationalized to LFS
+
 2006-12-14  Brian Bidulock  <bidulock@openss7.org>
 
 	- debian script corrections from Michael Fig <fig@marketsystems.com>
